<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ponder</groupId>
	<artifactId>ponder</artifactId>
	<version>2.5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Ponder</name>
	<url>https://github.com/nullterminated/ponder</url>
	<modules>
		<module>AWSPlugin</module>
		<module>ERCoreBL</module>
		<module>ERR2d2w</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>25</maven.compiler.release>
		<womodular.version>1.0.0</womodular.version>
		<wonder.version>7.5-SNAPSHOT</wonder.version>
		<doclint>none</doclint>
	</properties>
	<build>
        <testSourceDirectory>Tests</testSourceDirectory>
        <sourceDirectory>Sources</sourceDirectory>
		<resources>
			<resource>
				<targetPath>META-INF/webobjects/Resources</targetPath>
				<filtering>false</filtering>
				<directory>Components</directory>
			</resource>
			<resource>
				<targetPath>META-INF/webobjects/Resources</targetPath>
				<filtering>false</filtering>
				<directory>Resources</directory>
			</resource>
			<resource>
				<targetPath>META-INF/webobjects/WebServerResources</targetPath>
				<filtering>false</filtering>
				<directory>WebServerResources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>generate-infoplist</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/Resources</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/FilteredResources</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/nullterminated/ponder</url>
		</repository>
	</distributionManagement>
	<scm>
		<connection>scm:git:https://github.com/nullterminated/ponder.git</connection>
		<url>scm:git:https://github.com/nullterminated/ponder.git</url>
		<developerConnection>scm:git:https://github.com/nullterminated/ponder.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>wonder.core</groupId>
				<artifactId>erextensions</artifactId>
				<version>${wonder.version}</version>
			</dependency>
			<dependency>
				<groupId>wonder.core</groupId>
				<artifactId>erjavamail</artifactId>
				<version>${wonder.version}</version>
			</dependency>
			<dependency>
				<groupId>wonder.core</groupId>
				<artifactId>erdirecttoweb</artifactId>
				<version>${wonder.version}</version>
			</dependency>
			<dependency>
				<groupId>wonder.businesslogic</groupId>
				<artifactId>erattachment</artifactId>
				<version>${wonder.version}</version>
			</dependency>
			<dependency>
				<groupId>ponder</groupId>
				<artifactId>ercorebl</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>ponder</groupId>
				<artifactId>erauth</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>ponder</groupId>
				<artifactId>erdatum</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>ponder</groupId>
				<artifactId>err2dw</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>wonder.core</groupId>
				<artifactId>javawoextensions</artifactId>
				<version>${wonder.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-foundation</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-eocontrol</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-eoaccess</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-jdbcadaptor</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-webobjects</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-dtwgeneration</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-eoproject</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wocommunity</groupId>
				<artifactId>wonder-modular-directtoweb</artifactId>
				<version>${womodular.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>1.4.1</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk</artifactId>
				<version>1.12.794</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-core-asl</artifactId>
				<version>1.6.9</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>1.6.9</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.14</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
